kubenetes/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: i1
spec:
  ingressClassName: nginx
  rules:
    - host: kyle.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: s1
                port:
                  number: 4000
